--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
             {%- endif -%}
           {%- endfor -%}
           <a class="page-link" href="/feed.xml">RSS</a>
-          <a class="page-link" href="mailto:subhan@logicblocks.co?Subject=Ramblings">Contact</a>
+          <a class="page-link" href="mailto:khansubhan95@gmail.com?Subject=Ramblings">Contact</a>
         </div>
       </nav>
     {%- endif -%}
