--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,41 +3,27 @@
 
 {%- include head.html -%}
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 <body>
 
-  {%- include header-projects.html -%}
+  {%- include header.html -%}
 
-  <main class="page-content" aria-label="Content">
-    <div class="wrapper">
-      <div class="row">
-        {% for project in site.projects %}
-        <div class="card bg-light border-dark mb-3" style="width: 100%;">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <img src="{{ project.image }}" class="card-img">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">{{ project.name }}</h5>
-                <p class="card-text">{{ project.description }}</p>
-                <a href="{{ project.github_link }}" class="card-link">GitHub</a>
-                {% if project.live_link %}
-                <a href="{{ project.live_link }}" class="card-link">Live</a>
-                {% endif %}
-              </div>
-            </div>
-          </div>
+  <main class="page-content" aria-label="Content">    
+    <div class="container">
+      {% for project in site.projects %}
+      <div class="box">
+        <img src="{{ project.image }}" class="project-image">
+        <p class="project-title">{{ project.name }}</p>
+        <p class="project-description">{{ project.description }}</p>
+        <div class="card-link"><a href="{{ project.github_link }}" class="project-link">GitHub</a></div>
+        {% if project.live_link %}
+        <div class="card-link">
+        <a href="{{ project.live_link }}" class="project-link">  Live</a>
         </div>
-        {% endfor %}
+        {% endif %}
       </div>
+      {% endfor %}
     </div>
-  </main>
-</body>
-
+  </body>
+  
+</main>
 </html>
