--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,6 +9,20 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 /* Box-sizing border-box */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+.site-title {
+    font-size: 2em;
+    font-family: monospace;
+}
+
+.page-link {
+    font-size: 1em;
+    font-family: monospace;
+}
+
+.post-meta {
+    font-size: 18px;
+}
+
 
 .container {
     margin-left: 10%;
@@ -23,6 +37,12 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
     border-radius: 10px;
     margin: 10px;
     padding: 30px;
+    background-color: white;
+    transition: all .2s ease-in-out;
+}
+
+.box:hover {
+    transform: scale(1.2);
 }
 
 .project-image {
