--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,11 +33,17 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 .box {
     width: calc(33.33333333% - 20px);
-    border: 1px solid black;
-    border-radius: 10px;
+    // border: 1px solid black;
+    border-radius: 2px;
     margin: 10px;
     padding: 30px;
     background-color: white;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.box:hover {
+    transition: box-shadow .25s;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .project-image {
@@ -62,8 +68,9 @@ div.card-link {
 
 a.project-link {
     color: black;
-    text-decoration: none;
+    text-decoration: underline;
     padding: 2px;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 601px) and (max-width: 900px) {
@@ -76,6 +83,6 @@ a.project-link {
 @media screen and (max-width: 600px) {
     .box {
         width: calc(100% - 4px);
-        margin: 2px;
+        // margin: 2px;
     }
 }
