Change live_link from Live to Demo

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -17,7 +17,7 @@
         <div class="card-link"><a href="{{ project.github_link }}" class="project-link">GitHub</a></div>
         {% if project.live_link %}
         <div class="card-link">
-        <a href="{{ project.live_link }}" class="project-link">  Live</a>
+        <a href="{{ project.live_link }}" class="project-link">  Demo</a>
         </div>
         {% endif %}
       </div>
