--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<script src="https://kit.fontawesome.com/9e5288f121.js"></script>
 
   {%- include head.html -%}
 
