--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-          <a class="page-link" href="mailto:khansubhan95@gmail.com?Subject=Ramblings">Contact</a>
+          <!-- <a class="page-link" href="mailto:khansubhan95@gmail.com?Subject=Ramblings">Contact</a> -->
         </div>
       </nav>
     {%- endif -%}
