--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,6 +8,7 @@
   <p>
     <label>Message: <textarea name="message"></textarea></label>
   </p>
+  <div data-netlify-recaptcha="true"></div>
   <p>
     <button type="submit">Send</button>
   </p>
