--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,14 +17,17 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="/">Archives</a>
+          <!-- <a class="page-link" href="/">Archives</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
-          {%- endfor -%}
+          {%- endfor -%} -->
           <!-- <a class="page-link" href="mailto:khansubhan95@gmail.com?Subject=Ramblings">Contact</a> -->
+          {% for item in site.data.samplelist.docs %}
+            <a class="page-link" href="{{ item.url | relative_url }}">{{ item.title | escape }}</a>
+         {% endfor %}
         </div>
       </nav>
     {%- endif -%}
