--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,15 +1,21 @@
-<form name="contact" method="POST" data-netlify="true">
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>   
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <div data-netlify-recaptcha="true"></div>
-  <p>
-    <button type="submit">Send</button>
-  </p>
-</form>
+<div class="wrapper">
+	<div class="post-content">
+		<form name="contact" method="POST" data-netlify="true">
+		  <p>
+		    <label style="font-family: monospace;">Name<br><input style="width: 100%;" type="text" name="name" /></label>   
+		  </p>
+		  <p>
+		    <label style="font-family: monospace;">Email<br><input style="width: 100%;" type="email" name="email" /></label>
+		  </p>
+		  <p>
+		    <label style="font-family: monospace;">Message<br><textarea style="width: 100%;" rows="15" name="message"></textarea></label>
+		  </p>
+		  <div data-netlify-recaptcha="true"></div>
+		  <p>
+		    <button class="send-button" type="submit">Send</button>
+		  </p>
+		</form>
+
+	</div>
+</div>
+
