--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         </label>
 
         <div class="trigger">
-          {% for item in site.data.samplelist.docs %}
+          {% for item in site.data.navlist.docs %}
             <a class="page-link" href="{{ item.url | relative_url }}">{{ item.title | escape }}</a>
          {% endfor %}
         </div>
