--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
 	<div class="post-content">
+		<p>Contact me using <a href="mailto:subhan@mskhan.me">email</a> or fill the form below.</p>
 		<form name="contact" method="POST" data-netlify="true">
 		  <p>
 		    <label style="font-family: monospace;">Name<br><input style="width: 100%;" type="text" name="name" /></label>   
