--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Archives" }}</h2>
+    <h2 class="post-title">{{ page.list_title | default: "Archives" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
@@ -29,7 +29,6 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
   {%- endif -%}
 
 </div>
