Edit contact form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-	<div class="post-content">
+<div>
+	<div>
 		<p>Contact me using <a href="mailto:subhan@mskhan.me">email</a> or fill the form below.</p>
 		<form name="contact" method="POST" data-netlify="true">
 		  <p>
