--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,6 +12,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 .site-title {
     font-size: 1.5em;
     font-family: monospace;
+    font-weight: bold;
 }
 
 .page-link {
