--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-title">{{ page.list_title | default: "Archives" }}</h2>
+    <h2 class="post-title">{{ page.title | default: "Archives 📔" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
