--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}  <i class="{{ page.icon }}"></i></h1>
+    <h1 class="post-title"><i class="{{ page.icon }}"></i>  {{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content">
