--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,19 @@
       </div>
     </main>
 
+    {% if page.cms %}
+      <script>
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", user => {
+            if (!user) {
+              window.netlifyIdentity.on("login", () => {
+                document.location.href = "/admin/";
+              });
+            }
+          });
+        }
+      </script>
+    {% endif %}
   </body>
 
 </html>
