--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           window.netlifyIdentity.on("init", user => {
             if (!user) {
               window.netlifyIdentity.on("login", () => {
-                document.location.href = "/admin/";
+                document.location.href = "/admin-write-post/";
               });
             }
           });
