--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,22 +1,6 @@
 <div>
 	<div>
-		<p>Contact me using <a href="mailto:mohammed@mskhan.in">email</a> or fill the form below.</p>
-		<form name="contact" method="POST" data-netlify="true">
-		  <p>
-		    <label style="font-family: monospace;">Name<br><input style="width: 100%;" type="text" name="name" /></label>   
-		  </p>
-		  <p>
-		    <label style="font-family: monospace;">Email<br><input style="width: 100%;" type="email" name="email" /></label>
-		  </p>
-		  <p>
-		    <label style="font-family: monospace;">Message<br><textarea style="width: 100%;" rows="5" name="message"></textarea></label>
-		  </p>
-		  <div data-netlify-recaptcha="true"></div>
-		  <br>
-		  <p>
-		    <button class="send-button" type="submit">Send</button>
-		  </p>
-		</form>
+		<p>Email me at <a href="mailto:mohammed@mskhan.in">mohammed@mskhan.in</a>.</p>
 
 	</div>
 </div>
