Edit contact and index

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <div>
 	<div>
-		<p>Email me at <a href="mailto:mohammed@mskhan.in">mohammed@mskhan.in</a>.</p>
+		<p>Email me at <a href="mailto:mohammed@mskhan.in">mohammed@mskhan.in</a></p>
 
 	</div>
 </div>
