--- a/assets/main.scss
+++ b/assets/main.scss
@@ -112,6 +112,10 @@ a.icon-link:visited {
     text-decoration: underline;
 }
 
+#elsewhere-on-the-internet {
+    text-decoration: underline;
+}
+
 .site-header {
     border-top: none;
     border-bottom: none;
