--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,5 @@
     {% if page.cms %}
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     {% endif %}
-    <link rel="icon" type="image/icon" href="/favicon.ico"/>
+    <link rel="icon" type="image/icon" href="/assets/favicon.ico"/>
   </head>
