--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     {% endif %}
     <link rel="icon" type="image/icon" href="/assets/favicon.ico"/>
+    <title>{{ title }}</title>
   </head>
